<resources>
    <string name="app_name">News</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="news_sources">News Sources</string>
    <string name="country_selection">Countries</string>
    <string name="language_selection">Languages</string>
    <string name="search_screen">Search</string>
    <string name="search_news">Search News</string>
    <string name="try_again">Try Again</string>
    <string name="oops">Oops!</string>
    <string name="no_news">Sorry, No news available at this moment.</string>
    <string name="something_went_wrong_please_try_gaian">Something went wrong please try again.</string>
    <string name="read_article">"Read Article "</string>
    <string name="loading">"Loading   </string>
</resources>


